# ADP-Project

./: README.md  subin.txt
forzaeth_local_planner/: CMakeLists.txt  package.xml
forzaeth_local_planner/config/: local_planner.yaml
forzaeth_local_planner/include/forzaeth_local_planner/: local_planner_node.hpp
forzaeth_local_planner/launch/: local_planner.launch.py
forzaeth_local_planner/resource/: forzaeth_local_planner
forzaeth_local_planner/src/: local_planner_node.cpp  main.cpp
forzaeth_local_planner/test/: local_planner_test.cpp
global_planner/: CMakeLists.txt  package.xml
global_planner/include/: centerline_extractor.hpp  curvature_planner.hpp  global_planner_node.hpp  time_optimal_planner.hpp  utils.hpp  velocity_planner.hpp
global_planner/install/: local_setup.sh  setup.sh  setup.zsh
global_planner/install/global_planner/share/global_planner/: package.dsv  package.ps1  package.sh  package.zsh
global_planner/launch/: global_planner.launch.py  minimal_laptime.launch.py
global_planner/log/: latest_build
global_planner/msg/: Wpnt.msg
global_planner/src/: centerline_extractor.cpp  curvature_planner.cpp  global_planner_node.cpp  time_optimal_planner.cpp  utils.cpp  velocity_planner.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/ackermann_mux/share/ackermann_mux/: local_setup.sh  package.sh
install/controller/lib/controller/: controller_small
install/controller/share/controller/: package.sh
install/controller_cpp/share/controller_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/controller_cpp/share/controller_cpp/cfg/: F1TENTH_Pacejka_lookup_table.csv
install/controller_cpp/share/controller_cpp/cmake/: controller_cppConfig.cmake
install/controller_cpp/share/controller_cpp/launch/: controller_launch.xml
install/f110_gym/share/f110_gym/: package.sh
install/f110_msgs/share/f110_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
install/f1tenth_stack/share/f1tenth_stack/: package.sh
install/frenet_conversion/lib/frenet_conversion/: frenet_converter_demo
install/frenet_conversion/share/frenet_conversion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frenet_conversion_cpp/include/frenet_conversion_cpp/: frenet_converter_cpp.hpp
install/frenet_conversion_cpp/share/frenet_conversion_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/frenet_odom_republisher/lib/frenet_odom_republisher/: frenet_odom_republisher_node
install/frenet_odom_republisher/share/frenet_odom_republisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frenet_odom_republisher_cpp/lib/frenet_odom_republisher_cpp/: frenet_odom_republisher
install/frenet_odom_republisher_cpp/share/frenet_odom_republisher_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/global_planner/lib/global_planner/: global_planner  global_trajectory_publisher
install/global_planner/share/global_planner/: package.bash  package.dsv  package.ps1  package.sh
install/id_controller/share/id_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joy_teleop/lib/joy_teleop/: incrementer_server  joy_teleop
install/joy_teleop/share/joy_teleop/: package.sh
install/key_teleop/lib/key_teleop/: key_teleop
install/key_teleop/share/key_teleop/: package.sh
install/lap_analyser/lib/lap_analyser/: lap_analyser
install/lap_analyser/share/lap_analyser/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/map_editor/share/map_editor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mouse_teleop/lib/mouse_teleop/: mouse_teleop
install/mouse_teleop/share/mouse_teleop/: package.sh
install/ofc/lib/ofc/: bag_recorder  bag_recorder_sim  enabled_guard  ftg  joy_controller  tln_inference
install/ofc/share/ofc/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ofc/share/ofc/launch/: ofc_enabled.launch.py  ofc_enabled_sim.launch.py
install/ofc/share/ofc/models/: TLN_aug.keras  f2_f4_additional_finetune.best.keras  f2_f4_additional_finetune_SAFE.keras  f2_f4_all_silverstone_7lap_plus_inner.keras  f2_f4_all_silverstone_7lap_reversed5.keras  f2_f4_alone.keras  f2_f4_alone2.keras  f2_f4_inner.keras  f2_f4_silverstone_7lap.keras  f2_f4_silverstone_7lap_curve.keras  f2_f4_silverstone_7lap_inner_reversed.keras  f2_f4_silverstone_7lap_inner_reversed2.keras  f2_f4_silverstone_7lap_inner_reversed4.keras  f2_f4_silverstone_7lap_mirrored.keras  f2_f4_silverstone_7lap_reversed.keras  f2_f4_silverstone_mirrored.keras  final_mirrored.keras  original_plus_small_map.keras  train4_silverstone_7lap.keras
install/opponent_publisher/lib/opponent_publisher/: collision_detector  obstacle_publisher
install/opponent_publisher/share/opponent_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/opponent_publisher_cpp/share/opponent_publisher_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/particle_filter/share/particle_filter/: package.sh
install/perception_cpp/share/perception_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perception_cpp/share/perception_cpp/cmake/: perception_cppConfig.cmake
install/perception_cpp/share/perception_cpp/launch/: perception_launch.xml
log/: latest_build
teb_local_planner/: CHECK_RESULTS.md  CMakeLists.txt  PPT_KEY_CODE.md  PROJECT_SUMMARY.md  TEB_IMPLEMENTATION.md  package.xml
teb_local_planner/config/: local_planner.yaml
teb_local_planner/include/teb_local_planner/: local_planner_node.hpp  teb.hpp
teb_local_planner/launch/: local_planner.launch.py
teb_local_planner/src/: local_planner_node.cpp  main.cpp  teb.cpp
teb_local_planner/test/: local_planner_test.cpp  publish_dummy_messages.py
(+282 files in other folders)
